--- a/package.json
+++ b/package.json
@@ -16,14 +16,18 @@
        {
            "name": "Andrew Hao",
            "email": "andrewhao@gmail.com",
-           "web": "http://www.g9labs.com" 
+           "web": "http://www.g9labs.com"
        }
    ],
    "licenses": [
        {
            "type": "GPLv2",
-           "url": "http://www.example.org/licenses/gpl.html" 
-       }
+           "url": "http://www.example.org/licenses/gpl.html"
+       },
+       {
+           "type": "MIT",
+           "url": "http://www.opensource.org/licenses/MIT"
+       },
    ],
    "repositories": [
        {
@@ -35,7 +39,7 @@
        "socket.io": "0.8.4",
        "express": "2.4.6",
        "jade": "0.15.4",
-       "redis": "0.7.1"
+       "imagemagick": "0.1.2"
    },
    "engines": ["node >=0.4.11"],
    "directories": {
