--- a/package.json
+++ b/package.json
@@ -27,7 +27,7 @@
        {
            "type": "MIT",
            "url": "http://www.opensource.org/licenses/MIT"
-       },
+       }
    ],
    "repositories": [
        {
@@ -36,12 +36,12 @@
        }
    ],
    "dependencies": {
-       "socket.io": "0.8.4",
-       "express": "2.4.6",
+       "socket.io": "0.8.7",
+       "express": ">=2.4.6",
        "jade": "0.15.4",
        "imagemagick": "0.1.2"
    },
-   "engines": ["node >=0.4.11"],
+   "engines": ["node >=0.6.2"],
    "directories": {
        "lib": "lib"
    }
