--- a/package.json
+++ b/package.json
@@ -40,7 +40,7 @@
        "express": ">=2.4.6",
        "jade": ">=0.15.4",
        "imagemagick": ">=0.1.2",
-       "yaml": ">=0.2.3"
+       "yaml": ">=0.2.3",
    },
    "engines": ["node >=0.6.2"],
    "directories": {
