Adding default test npm script, plus add travis build directive.

--- a/package.json
+++ b/package.json
@@ -14,7 +14,8 @@
     "party"
   ],
   "scripts": {
-    "start": "node_modules/.bin/coffee app.coffee"
+    "start": "node_modules/.bin/coffee app.coffee",
+    "test": "gulp test"
   },
   "license": "MIT",
   "repository": {
