--- a/package.json
+++ b/package.json
@@ -34,7 +34,9 @@
     "gulp": "~3.6.2",
     "chai": "*",
     "mocha": "~1.19.0",
-    "gulp-spawn-mocha": "~0.1.4"
+    "gulp-spawn-mocha": "~0.1.4",
+    "sinon": "~1.10.0",
+    "rewire": "~2.0.1"
   },
   "engines": [
     "node >=0.8.0"
