--- a/package.json
+++ b/package.json
@@ -28,7 +28,8 @@
     "jade": "~1.2.0",
     "imagemagick": "~0.1.3",
     "yaml": "~0.2.3",
-    "coffee-script": "~1.7.1"
+    "coffee-script": "~1.7.1",
+    "dotenv": "~0.3.0"
   },
   "devDependencies": {
     "gulp": "~3.6.2",
