--- a/package.json
+++ b/package.json
@@ -37,7 +37,8 @@
     "mocha": "~1.19.0",
     "gulp-spawn-mocha": "~0.1.4",
     "sinon": "~1.10.0",
-    "rewire": "~2.0.1"
+    "rewire": "~2.0.1",
+    "fs-extra": "~0.11.0"
   },
   "engines": [
     "node >=0.8.0"
