--- a/bower.json
+++ b/bower.json
@@ -22,6 +22,7 @@
     "jquery": "~2.1.1",
     "raphael": "dbe241f4c5310dd9bf3b451c538d78c6c4a0e288",
     "javascript-state-machine": "~2.3.3",
-    "underscore": "~1.7.0"
+    "underscore": "~1.7.0",
+    "backbone": "~1.1.2"
   }
 }
